# api/gen/go/todo/v1/openapi.pb.go
@@ -25,8 +25,11 @@ var File_todo_v1_openapi_proto protoreflect.FileDescriptor
 
 const file_todo_v1_openapi_proto_rawDesc = "" +
 	"\n" +
-	"\x15todo/v1/openapi.proto\x12\atodo.v1\x1a$gnostic/openapi/v3/annotations.protoB\x8e\x01\xbaG\x10\x12\x0e\n" +
-	"\bTodo API2\x02v1\n" +
+	"\x15todo/v1/openapi.proto\x12\atodo.v1\x1a$gnostic/openapi/v3/annotations.protoB\xbb\x01\xbaG=\x12\x0e\n" +
+	"\bTodo API2\x02v1\x1a+\n" +
+	"\x17http://localhost:{port}\x1a\x10\n" +
+	"\x0e\n" +
+	"\x04port\x12\x06\x12\x048080\n" +
 	"\vcom.todo.v1B\fOpenapiProtoP\x01Z!example/app/gen/go/todo/v1;todov1\xa2\x02\x03TXX\xaa\x02\aTodo.V1\xca\x02\aTodo\\V1\xe2\x02\x13Todo\\V1\\GPBMetadata\xea\x02\bTodo::V1b\x06proto3"
 
 var file_todo_v1_openapi_proto_goTypes = []any{}
